fix last slice reduce

--- a/prototyping/06-loop-last-layer-impact.ipynb
+++ b/prototyping/06-loop-last-layer-impact.ipynb
@@ -18,6 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tqdm\n",
     "import numpy as np\n",
     "import skimage.measure\n",
     "import matplotlib.pyplot as plt"
@@ -152,6 +153,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "02a26778-4f7b-4eb9-a028-8fb1357b9d8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "original_num_slices = image_stack.shape[0]\n",
+    "\n",
+    "slice_reduction = cfg[\"reduce_block_sizes\"][0][0]\n",
+    "desired_num_slices = int(np.ceil(original_num_slices / slice_reduction) * slice_reduction)\n",
+    "\n",
+    "if original_num_slices != desired_num_slices:\n",
+    "    image_stack = image_stack.take(range(desired_num_slices), axis=0, mode='clip')\n",
+    "    \n",
+    "num_slices = image_stack.shape[0]\n",
+    "assert num_slices == desired_num_slices\n",
+    "assert image_stack.shape[1:3] == (512, 512)\n",
+    "\n",
+    "image_stack.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "eb710540-d375-4490-a2ce-e9b41cbc420a",
    "metadata": {},
    "outputs": [],
@@ -173,17 +196,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "39b5bb39-a3b1-4bb5-8e11-abdaf0caf44e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "step_size = 40\n",
+    "\n",
+    "reduced_num_slices = reduced_image_stack.shape[0]\n",
+    "step_size = int(np.ceil(reduced_num_slices / np.ceil(reduced_num_slices / step_size)))\n",
+    "z = list(range(0, reduced_num_slices, step_size)) + [reduced_num_slices]\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6b18fc55-6207-4951-8927-6c20cc5ea36f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "z = [0, 30, 60, 90]\n",
-    "y = [30, 60, 90, 120]\n",
+    "y = [30, 60, 90]\n",
     "x = [30, 60, 90]\n",
     "\n",
     "predicted_masks = rai.inference_over_jittered_grid(\n",
-    "    cfg=cfg, model=rai_starting_model, grid=(z, y, x), image_stack=reduced_image_stack,\n",
+    "    cfg=cfg, model=rai_starting_model, grid=(z, y, x), image_stack=reduced_image_stack, max_batch_size=10\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff3c2602-c6e1-425b-9a38-ae47a428b038",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "where_mask = np.where(predicted_masks > 127.5)\n",
+    "np.min(where_mask, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0589eefb-f332-4e2f-80af-c024afb456d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.max(where_mask, axis=1)"
    ]
   },
   {
@@ -238,13 +296,8 @@
     "for i in range(3):\n",
     "    upscaled = np.repeat(upscaled, repeats=2, axis=i)\n",
     "\n",
-    "if upscaled.shape[0] != image_stack.shape[0]:\n",
-    "    upscaled = upscaled.astype(np.float32)\n",
-    "    \n",
-    "    upscaled = np.mean([upscaled[1:, ...], upscaled[0:-1, ...]], axis=0)\n",
-    "    assert upscaled.shape[0] == image_stack.shape[0]\n",
-    "    \n",
-    "    upscaled = np.round(upscaled).astype(np.uint8)\n",
+    "\n",
+    "assert upscaled.shape[0] == image_stack.shape[0]\n",
     "    \n",
     "upscaled.shape"
    ]
@@ -290,7 +343,7 @@
    "source": [
     "z = [0, 30, 60, 90, 120, 150, 180]\n",
     "y = [60, 90, 120, 150, 180, 210, 240, 270]\n",
-    "x = [70, 100, 130, 160, 190, 220, 250]\n",
+    "x = [30, 60, 90, 120, 150, 180, 210, 240, 270]\n",
     "\n",
     "predicted_masks = rai.inference_over_jittered_grid(\n",
     "    cfg=cfg, model=rai_dependent_model, grid=(z, y, x), image_stack=reduced_image_stack, masks_stack=upscaled, max_batch_size=10\n",
@@ -346,14 +399,6 @@
     "\n",
     "for i in range(1,3):\n",
     "    upscaled = np.repeat(upscaled, repeats=2, axis=i)\n",
-    "\n",
-    "if upscaled.shape[0] != image_stack.shape[0]:\n",
-    "    upscaled = upscaled.astype(np.float32)\n",
-    "    \n",
-    "    upscaled = np.mean([upscaled[1:, ...], upscaled[0:-1, ...]], axis=0)\n",
-    "    assert upscaled.shape[0] == image_stack.shape[0]\n",
-    "    \n",
-    "    upscaled = np.round(upscaled).astype(np.uint8)\n",
     "    \n",
     "upscaled.shape"
    ]
@@ -412,7 +457,12 @@
    "id": "324e2854-eaee-4904-9bbe-8a2ab4f85510",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "num_slices = image_stack.shape[0]\n",
+    "step_size = int(np.floor(num_slices / np.ceil(num_slices / 40)))\n",
+    "z = list(range(0, num_slices, step_size)) + [num_slices]\n",
+    "z"
+   ]
   },
   {
    "cell_type": "code",
@@ -421,16 +471,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "z = [0, 30, 60, 90, 120]\n",
-    "y = [130, 160, 190, 220, 250, 280, 310, 340]\n",
-    "x = [180, 210, 240, 270, 300, 330]\n",
+    "y = list(range(0, 513, 32))\n",
+    "x = list(range(0, 513, 32))\n",
     "\n",
     "predicted_masks = upscaled\n",
     "\n",
     "looped_dice = []\n",
     "for i in range(5):\n",
     "    predicted_masks = rai.inference_over_jittered_grid(\n",
-    "        cfg=cfg, model=rai_dependent_model, grid=(z, y, x), image_stack=image_stack, masks_stack=predicted_masks\n",
+    "        cfg=cfg, model=rai_dependent_model, grid=(z, y, x), image_stack=image_stack, masks_stack=predicted_masks, max_batch_size=10\n",
     "    )\n",
     "    \n",
     "    \n",
@@ -485,7 +534,9 @@
    "id": "fc3f0eb4-ac4b-4402-aec3-47c6aaef28e0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "looped_dice"
+   ]
   },
   {
    "cell_type": "code",
