pruning points prior to calc, added in TODO

--- a/prototyping/06-loop-last-layer-impact.ipynb
+++ b/prototyping/06-loop-last-layer-impact.ipynb
@@ -337,13 +337,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a6d77fd3-55fa-4456-a5b8-9fc6c7768f1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "step_size = 40\n",
+    "\n",
+    "reduced_num_slices = reduced_image_stack.shape[0]\n",
+    "step_size = int(np.ceil(reduced_num_slices / np.ceil(reduced_num_slices / step_size)))\n",
+    "z = list(range(0, reduced_num_slices, step_size)) + [reduced_num_slices]\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "669f8f6c-ec7a-4b64-ad87-967df94d8ee6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "z = [0, 30, 60, 90, 120, 150, 180]\n",
-    "y = [60, 90, 120, 150, 180, 210, 240, 270]\n",
-    "x = [30, 60, 90, 120, 150, 180, 210, 240, 270]\n",
+    "y = [60, 95, 130, 165]\n",
+    "x = [65, 105, 145, 185]\n",
     "\n",
     "predicted_masks = rai.inference_over_jittered_grid(\n",
     "    cfg=cfg, model=rai_dependent_model, grid=(z, y, x), image_stack=reduced_image_stack, masks_stack=upscaled, max_batch_size=10\n",
@@ -361,10 +375,10 @@
     "reduced_y_grid = skimage.measure.block_reduce(y_grid, block_size=cfg[\"reduce_block_sizes\"][1][1], func=np.mean)\n",
     "\n",
     "reduced_predicted_contours_by_structure = rai.masks_to_contours_by_structure(\n",
-    "    cfg=cfg, x_grid=reduced_x_grid, y_grid=reduced_y_grid, masks=predicted_masks\n",
+    "    cfg=cfg, x_grid=reduced_x_grid, y_grid=reduced_y_grid, masks=predicted_masks[0:original_num_slices, ...]\n",
     ")\n",
     "rai.plot_contours_by_structure(\n",
-    "    reduced_x_grid, reduced_y_grid, reduced_image_stack, reduced_predicted_contours_by_structure\n",
+    "    reduced_x_grid, reduced_y_grid, reduced_image_stack[0:original_num_slices,...], reduced_predicted_contours_by_structure\n",
     ")"
    ]
   },
@@ -459,9 +473,52 @@
    "outputs": [],
    "source": [
     "num_slices = image_stack.shape[0]\n",
-    "step_size = int(np.floor(num_slices / np.ceil(num_slices / 40)))\n",
+    "step_size = int(np.ceil(num_slices / np.ceil(num_slices / 40)))\n",
     "z = list(range(0, num_slices, step_size)) + [num_slices]\n",
     "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "387c00ad-c50b-494b-9fe1-532d1bfca7c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "where_mask = np.where(upscaled > 127.5)\n",
+    "np.min(where_mask, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ff403b6-644a-4de6-bee3-3b22ea607400",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.max(where_mask, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f16e58e-3238-4d4c-beac-f065efc5db51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = list(range(125, 330, 40))\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2cd3fbd-b850-4ee1-89f5-76380054896f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = list(range(130, 380, 40))\n",
+    "x"
    ]
   },
   {
@@ -471,20 +528,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = list(range(0, 513, 32))\n",
-    "x = list(range(0, 513, 32))\n",
-    "\n",
     "predicted_masks = upscaled\n",
     "\n",
     "looped_dice = []\n",
-    "for i in range(5):\n",
+    "for i in range(1):\n",
     "    predicted_masks = rai.inference_over_jittered_grid(\n",
-    "        cfg=cfg, model=rai_dependent_model, grid=(z, y, x), image_stack=image_stack, masks_stack=predicted_masks, max_batch_size=10\n",
+    "        cfg=cfg, \n",
+    "        model=rai_dependent_model, \n",
+    "        grid=(z, y, x), \n",
+    "        image_stack=image_stack, \n",
+    "        masks_stack=predicted_masks, \n",
+    "        max_batch_size=10, \n",
+    "        verify=False  # TODO: Remove this before publishing\n",
     "    )\n",
     "    \n",
     "    \n",
     "    predicted_contours_by_structure = rai.masks_to_contours_by_structure(\n",
-    "        cfg=cfg, x_grid=x_grid, y_grid=y_grid, masks=predicted_masks\n",
+    "        cfg=cfg, x_grid=x_grid, y_grid=y_grid, masks=predicted_masks[0:original_num_slices, ...]\n",
     "    )\n",
     "    \n",
     "    aligned_predicted_contours_by_structure = rai.merge_contours_by_structure(\n",
@@ -513,7 +573,7 @@
     "    for item in looped_dice:\n",
     "        dice.append(item[name])\n",
     "        \n",
-    "    plt.plot(dice, label=name)\n",
+    "    plt.plot(dice, '-o', label=name)\n",
     "    \n",
     "plt.legend()"
    ]
@@ -535,7 +595,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "looped_dice"
+    "# looped_dice"
    ]
   },
   {
@@ -546,7 +606,7 @@
    "outputs": [],
    "source": [
     "rai.plot_contours_by_structure(\n",
-    "    x_grid, y_grid, image_stack, predicted_contours_by_structure, align_map\n",
+    "    x_grid, y_grid, image_stack[0:original_num_slices, ...], predicted_contours_by_structure, align_map\n",
     ")"
    ]
   },
@@ -565,6 +625,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e4d91a0e-4961-40a7-9711-7f7deba69668",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Create an ipywidget slider for the slices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1b50155e-fdff-4b28-bc12-5a64857378b8",
    "metadata": {},
    "outputs": [],
@@ -575,7 +645,7 @@
     "}\n",
     "\n",
     "rai.plot_contours_by_structure(\n",
-    "    x_grid, y_grid, image_stack, combined_contours_by_structure, align_map\n",
+    "    x_grid, y_grid, image_stack[0:original_num_slices, ...], combined_contours_by_structure, align_map\n",
     ")"
    ]
   },
@@ -585,7 +655,11 @@
    "id": "c844fb0b-5e98-455a-8f57-3352b390aa40",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO:\n",
+    "# * Change figures to ipywidget sliders\n",
+    "# * Calculate and report hausdorff and surface dice as well"
+   ]
   }
  ],
  "metadata": {
