working on plotly vis

--- a/prototyping/07-plotly-display.ipynb
+++ b/prototyping/07-plotly-display.ipynb
@@ -135,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_grid, y_grid, image_stack, image_uids = rai.paths_to_image_stack_hfs(\n",
+    "x_grid, y_grid, z_grid, image_stack, image_uids = rai.paths_to_image_stack_hfs(\n",
     "    cfg=cfg, paths=image_paths\n",
     ")"
    ]
@@ -734,6 +734,349 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1e42390c-26f1-4c47-9386-04b655904bec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import plotly.graph_objects as go\n",
+    "r, theta = np.mgrid[0.1:1:10j, 0:360:20j]\n",
+    "color = np.random.random(r.shape)\n",
+    "fig = go.Figure(go.Barpolar(\n",
+    "    r=r.ravel(),\n",
+    "    theta=theta.ravel(),\n",
+    "    marker_color=color.ravel()),)\n",
+    "fig.update_layout(polar_bargap=0)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5ee975e-7139-49d6-b5d9-3bb15e4adefd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objects as go"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85d01ba2-e389-4bc7-8201-b05bf7b306a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from plotly.subplots import make_subplots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80e7316b-b1dd-46fb-aa98-d98a0df26b8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rai.mask import convert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5499a036-11ba-477e-b783-8f2cdca68704",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39e67047-92f6-410a-b3f6-c2113d6d303a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from plotly.subplots import make_subplots\n",
+    "from skimage import data\n",
+    "img = data.chelsea()\n",
+    "fig = make_subplots(1, 2)\n",
+    "# We use go.Image because subplots require traces, whereas px functions return a figure\n",
+    "fig.add_trace(go.Image(z=img), 1, 1)\n",
+    "for channel, color in enumerate(['red', 'green', 'blue']):\n",
+    "    fig.add_trace(go.Histogram(x=img[..., channel].ravel(), opacity=0.5,\n",
+    "                               marker_color=color, name='%s channel' %color), 1, 2)\n",
+    "fig.update_layout(height=400)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d216a1e6-1a15-4742-94ea-b4c8cee40169",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fb0f8c6-1521-493b-8fc9-0020136bbcbe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "529dc05b-1f4b-4685-be2c-8c2606714d0d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6db4517-c96b-4a6f-93ac-bfe4d4c3d245",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = image_stack[50, ...]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ca8eb06-0d18-4c6f-93cd-9ab99d077fe1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x0, dx = convert._grid_to_transform(x_grid)\n",
+    "y0, dy = convert._grid_to_transform(y_grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e6e5b77-b02f-4b64-a3cd-f0b43a51c12b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_grid[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b470d794-b0b9-4bdb-a5a1-76b9ae5a236c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x0 = x_grid[0]\n",
+    "dx = x_grid[1] - x_grid[0]\n",
+    "y0 = y_grid[-1]\n",
+    "dy = y_grid[-2] - y_grid[-1]\n",
+    "z0 = z_grid[0]\n",
+    "dz = z_grid[1] - z_grid[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bedf2f2-90ec-4249-8f10-357defecae67",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07f10ae3-7918-4d39-aeab-0c0088e90044",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# go.Heatmap?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ea57c7b-d1e9-4c37-9c92-ca00a05a07d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = make_subplots(\n",
+    "    rows=2,\n",
+    "    cols=2,\n",
+    "    # shared_xaxes=True,\n",
+    ")\n",
+    "fig.update_layout(height=800)\n",
+    "\n",
+    "fig.add_trace(\n",
+    "    go.Heatmap(\n",
+    "        x0=x0,\n",
+    "        dx=dx,\n",
+    "        y0=y0,\n",
+    "        dy=dy,\n",
+    "        z=image_stack[50, ...],\n",
+    "        colorscale=\"gray\",\n",
+    "        name=\"transverse\",\n",
+    "        zmin=0.2,\n",
+    "        zmax=0.4,\n",
+    "        xaxis=\"x\",\n",
+    "        yaxis=\"y\",\n",
+    "    ), \n",
+    "    1,\n",
+    "    1,\n",
+    ")\n",
+    "\n",
+    "fig.add_trace(\n",
+    "    go.Heatmap(\n",
+    "        x0=y0,\n",
+    "        dx=dy,\n",
+    "        y0=z0,\n",
+    "        dy=dz,\n",
+    "        z=image_stack[:,:,256],\n",
+    "        colorscale=\"gray\",\n",
+    "        name=\"sagittal\",\n",
+    "        zmin=0.2,\n",
+    "        zmax=0.4,\n",
+    "        xaxis=\"x1\",\n",
+    "        yaxis=\"y1\",\n",
+    "    ), \n",
+    "    2,\n",
+    "    2,\n",
+    ")\n",
+    "\n",
+    "fig.add_trace(\n",
+    "    go.Heatmap(\n",
+    "        x0=x0,\n",
+    "        dx=dx,\n",
+    "        y0=z0,\n",
+    "        dy=dz,\n",
+    "        z=image_stack[:,256,:],\n",
+    "        colorscale=\"gray\",\n",
+    "        name=\"coronal\",\n",
+    "        zmin=0.2,\n",
+    "        zmax=0.4,\n",
+    "        xaxis=\"x2\",\n",
+    "        yaxis=\"y2\",\n",
+    "    ), \n",
+    "    2,\n",
+    "    1,\n",
+    ")\n",
+    "\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    {\n",
+    "        'xaxis': {'scaleanchor': 'y', \"constrain\":\"domain\"},\n",
+    "        'yaxis': {\"constrain\":\"domain\"},\n",
+    "        'xaxis3': {'matches': 'x', \"constrain\":\"domain\"},\n",
+    "        'yaxis3': {'scaleanchor': 'x', \"constrain\":\"domain\"},\n",
+    "        'yaxis4': {'matches': 'y3', \"constrain\":\"domain\"},\n",
+    "        'xaxis4': {'scaleanchor': 'y', \"constrain\":\"domain\"},\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "\n",
+    "print(fig)\n",
+    "\n",
+    "fig\n",
+    "# # fig.update_layout(coloraxis_showscale=False)\n",
+    "# fig.update_xaxes(\n",
+    "#     selector={\"name\": \"coronal\"},\n",
+    "#     range=[-150, 150],\n",
+    "#     constrain=\"domain\",\n",
+    "# )\n",
+    "# fig.update_yaxes(\n",
+    "#     selector={\"name\": \"coronal\"},\n",
+    "#     scaleanchor = \"x\",\n",
+    "#     scaleratio = 1,\n",
+    "#     range=[-150, 150],\n",
+    "#     constrain=\"domain\",\n",
+    "# )\n",
+    "# fig.update_xaxes(\n",
+    "#     selector={\"name\": \"sagittal\"},\n",
+    "#     scaleanchor = \"y\",\n",
+    "#     scaleratio = 1,\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c176c7b-bdb2-40cb-a268-6bb3988e156d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.update_layout?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41bf6ad7-5455-4495-b8ae-22a530d29a78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.update_xaxes?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb669dd4-ebd9-4745-8dd1-0bcf079e3290",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "go.Heatmap?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b65f213e-bbce-4cda-a2b7-21572ae4990c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.imshow(\n",
+    "    image_stack[50, ...], \n",
+    "    x=x_grid,\n",
+    "    y=y_grid,\n",
+    "    width=800, \n",
+    "    height=800,\n",
+    "    color_continuous_scale='gray',\n",
+    "    zmin=0.2,\n",
+    "    zmax=0.4,\n",
+    ")\n",
+    "\n",
+    "\n",
+    "fig.update_layout(coloraxis_showscale=False)\n",
+    "fig.update_xaxes(showticklabels=False, range=[-100, 150])\n",
+    "fig.update_yaxes(showticklabels=False, range=[150, -100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "021e8cb6-f775-46c0-aac9-6d34b53df153",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.update_yaxes?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f36b5bf0-f642-41cd-adf0-4b3f0804fdc0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d8a3a8e-64c8-4feb-9a11-7f11e6d80043",
    "metadata": {},
    "outputs": [],
    "source": []
