panning by default, further plotly vis iteration

--- a/prototyping/07-plotly-display.ipynb
+++ b/prototyping/07-plotly-display.ipynb
@@ -907,9 +907,9 @@
     "fig = make_subplots(\n",
     "    rows=2,\n",
     "    cols=2,\n",
-    "    # shared_xaxes=True,\n",
+    "    vertical_spacing=0,\n",
+    "    horizontal_spacing=0,\n",
     ")\n",
-    "fig.update_layout(height=800)\n",
     "\n",
     "fig.add_trace(\n",
     "    go.Heatmap(\n",
@@ -924,6 +924,7 @@
     "        zmax=0.4,\n",
     "        xaxis=\"x\",\n",
     "        yaxis=\"y\",\n",
+    "        hoverinfo='skip',\n",
     "    ), \n",
     "    1,\n",
     "    1,\n",
@@ -942,6 +943,7 @@
     "        zmax=0.4,\n",
     "        xaxis=\"x1\",\n",
     "        yaxis=\"y1\",\n",
+    "        hoverinfo='skip',\n",
     "    ), \n",
     "    2,\n",
     "    2,\n",
@@ -960,6 +962,7 @@
     "        zmax=0.4,\n",
     "        xaxis=\"x2\",\n",
     "        yaxis=\"y2\",\n",
+    "        hoverinfo='skip',\n",
     "    ), \n",
     "    2,\n",
     "    1,\n",
@@ -968,19 +971,28 @@
     "\n",
     "fig.update_layout(\n",
     "    {\n",
-    "        'xaxis': {'scaleanchor': 'y', \"constrain\":\"domain\"},\n",
-    "        'yaxis': {\"constrain\":\"domain\"},\n",
-    "        'xaxis3': {'matches': 'x', \"constrain\":\"domain\"},\n",
-    "        'yaxis3': {'scaleanchor': 'x', \"constrain\":\"domain\"},\n",
-    "        'yaxis4': {'matches': 'y3', \"constrain\":\"domain\"},\n",
-    "        'xaxis4': {'scaleanchor': 'y', \"constrain\":\"domain\"},\n",
+    "        \"height\": 900,\n",
+    "        \"width\": 900,\n",
+    "        \"dragmode\": \"pan\",\n",
+    "        'xaxis': {\"range\": [-120, 150], 'scaleanchor': 'y', \"constrain\":\"domain\", \"showticklabels\": False},\n",
+    "        'yaxis': {\"range\": [-100, 170], \"constrain\":\"domain\", \"showticklabels\": False},\n",
+    "        'xaxis3': {'matches': 'x', \"constrain\":\"domain\", \"showticklabels\": False},\n",
+    "        'yaxis3': {\"range\": [-160, 110], 'scaleanchor': 'x3', \"constrain\":\"domain\", \"showticklabels\": False},\n",
+    "        'yaxis4': {'matches': 'y3', \"constrain\":\"domain\", \"showticklabels\": False},\n",
+    "        'xaxis4': {\"range\": [-100, 170], 'matches': 'y', \"constrain\":\"domain\", \"showticklabels\": False},\n",
     "    }\n",
     ")\n",
     "\n",
+    "fig.update_coloraxes(showscale=False)\n",
     "\n",
-    "print(fig)\n",
+    "fig.show(\n",
+    "    config={\n",
+    "        'displayModeBar': False,\n",
+    "        \"displaylogo\": False,\n",
+    "        \"scrollZoom\": True,\n",
+    "    }\n",
     "\n",
-    "fig\n",
+    ")\n",
     "# # fig.update_layout(coloraxis_showscale=False)\n",
     "# fig.update_xaxes(\n",
     "#     selector={\"name\": \"coronal\"},\n",
@@ -1004,11 +1016,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "09117bf9-e23e-4bc3-b95d-37d2ba653709",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.show?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1c176c7b-bdb2-40cb-a268-6bb3988e156d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig.update_layout?"
+    "print(fig)"
    ]
   },
   {
