--- a/prototyping/07-plotly-display.ipynb
+++ b/prototyping/07-plotly-display.ipynb
@@ -904,11 +904,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = make_subplots(\n",
-    "    rows=2,\n",
-    "    cols=2,\n",
-    "    vertical_spacing=0,\n",
-    "    horizontal_spacing=0,\n",
+    "fig = go.FigureWidget(\n",
+    "    make_subplots(\n",
+    "        rows=2,\n",
+    "        cols=2,\n",
+    "        vertical_spacing=0,\n",
+    "        horizontal_spacing=0,\n",
+    "    )\n",
     ")\n",
     "\n",
     "fig.add_trace(\n",
@@ -924,9 +926,28 @@
     "        zmax=0.4,\n",
     "        xaxis=\"x\",\n",
     "        yaxis=\"y\",\n",
-    "        hoverinfo='skip',\n",
+    "        # hoverinfo='skip',\n",
     "    ), \n",
     "    1,\n",
+    "    1,\n",
+    ")\n",
+    "\n",
+    "fig.add_trace(\n",
+    "    go.Heatmap(\n",
+    "        x0=x0,\n",
+    "        dx=dx,\n",
+    "        y0=z0,\n",
+    "        dy=dz,\n",
+    "        z=image_stack[:,256,:],\n",
+    "        colorscale=\"gray\",\n",
+    "        name=\"coronal\",\n",
+    "        zmin=0.2,\n",
+    "        zmax=0.4,\n",
+    "        xaxis=\"x3\",\n",
+    "        yaxis=\"y3\",\n",
+    "        # hoverinfo='skip',\n",
+    "    ), \n",
+    "    2,\n",
     "    1,\n",
     ")\n",
     "\n",
@@ -941,76 +962,55 @@
     "        name=\"sagittal\",\n",
     "        zmin=0.2,\n",
     "        zmax=0.4,\n",
-    "        xaxis=\"x1\",\n",
-    "        yaxis=\"y1\",\n",
-    "        hoverinfo='skip',\n",
+    "        xaxis=\"x4\",\n",
+    "        yaxis=\"y4\",\n",
+    "        # hoverinfo='skip',\n",
     "    ), \n",
     "    2,\n",
     "    2,\n",
     ")\n",
     "\n",
-    "fig.add_trace(\n",
-    "    go.Heatmap(\n",
-    "        x0=x0,\n",
-    "        dx=dx,\n",
-    "        y0=z0,\n",
-    "        dy=dz,\n",
-    "        z=image_stack[:,256,:],\n",
-    "        colorscale=\"gray\",\n",
-    "        name=\"coronal\",\n",
-    "        zmin=0.2,\n",
-    "        zmax=0.4,\n",
-    "        xaxis=\"x2\",\n",
-    "        yaxis=\"y2\",\n",
-    "        hoverinfo='skip',\n",
-    "    ), \n",
-    "    2,\n",
-    "    1,\n",
-    ")\n",
-    "\n",
+    "axis_common = {\n",
+    "    \"constrain\":\"domain\", \"showticklabels\": False,\n",
+    "    \"spikesnap\": \"cursor\", \"spikemode\": \"across\", \"spikedash\": \"solid\", \"spikethickness\": 0,\n",
+    "}\n",
     "\n",
     "fig.update_layout(\n",
     "    {\n",
+    "        \"hoverdistance\": 0,\n",
     "        \"height\": 900,\n",
     "        \"width\": 900,\n",
     "        \"dragmode\": \"pan\",\n",
-    "        'xaxis': {\"range\": [-120, 150], 'scaleanchor': 'y', \"constrain\":\"domain\", \"showticklabels\": False},\n",
-    "        'yaxis': {\"range\": [-100, 170], \"constrain\":\"domain\", \"showticklabels\": False},\n",
-    "        'xaxis3': {'matches': 'x', \"constrain\":\"domain\", \"showticklabels\": False},\n",
-    "        'yaxis3': {\"range\": [-160, 110], 'scaleanchor': 'x3', \"constrain\":\"domain\", \"showticklabels\": False},\n",
-    "        'yaxis4': {'matches': 'y3', \"constrain\":\"domain\", \"showticklabels\": False},\n",
-    "        'xaxis4': {\"range\": [-100, 170], 'matches': 'y', \"constrain\":\"domain\", \"showticklabels\": False},\n",
+    "        'xaxis': {\"range\": [-120, 150], 'scaleanchor': 'y', **axis_common},\n",
+    "        'yaxis': {\"range\": [-100, 170],  **axis_common},\n",
+    "        'xaxis3': {'matches': 'x',  **axis_common},\n",
+    "        'yaxis3': {\"range\": [-160, 110], 'scaleanchor': 'x3',  **axis_common},\n",
+    "        'yaxis4': {'matches': 'y3', **axis_common},\n",
+    "        'xaxis4': {'matches': 'y',  **axis_common},\n",
     "    }\n",
     ")\n",
     "\n",
     "fig.update_coloraxes(showscale=False)\n",
     "\n",
-    "fig.show(\n",
-    "    config={\n",
-    "        'displayModeBar': False,\n",
-    "        \"displaylogo\": False,\n",
-    "        \"scrollZoom\": True,\n",
-    "    }\n",
+    "# fig.show(\n",
+    "#     config={\n",
+    "#         'displayModeBar': False,\n",
+    "#         \"displaylogo\": False,\n",
+    "#         \"scrollZoom\": True,\n",
+    "#     }\n",
     "\n",
-    ")\n",
-    "# # fig.update_layout(coloraxis_showscale=False)\n",
-    "# fig.update_xaxes(\n",
-    "#     selector={\"name\": \"coronal\"},\n",
-    "#     range=[-150, 150],\n",
-    "#     constrain=\"domain\",\n",
     "# )\n",
-    "# fig.update_yaxes(\n",
-    "#     selector={\"name\": \"coronal\"},\n",
-    "#     scaleanchor = \"x\",\n",
-    "#     scaleratio = 1,\n",
-    "#     range=[-150, 150],\n",
-    "#     constrain=\"domain\",\n",
-    "# )\n",
-    "# fig.update_xaxes(\n",
-    "#     selector={\"name\": \"sagittal\"},\n",
-    "#     scaleanchor = \"y\",\n",
-    "#     scaleratio = 1,\n",
-    "# )"
+    "\n",
+    "\n",
+    "\n",
+    "def navigate_with_click(trace, points, selector):\n",
+    "    print(trace)\n",
+    "    print(points)\n",
+    "    print(selector)\n",
+    "    \n",
+    "    \n",
+    "fig.data[0].on_click(navigate_with_click)\n",
+    "fig"
    ]
   },
   {
@@ -1020,7 +1020,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig.show?"
+    "fig.data"
    ]
   },
   {
@@ -1032,6 +1032,63 @@
    "source": [
     "print(fig)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76ce942d-3c21-40c0-a1b4-c8dd97bd919e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82daceb8-0571-4364-a8ff-0f7473fabda2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipywidgets as widgets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87728cb5-7b8c-4822-9f9b-00fea7caedf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "widgets.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "112e9923-0dcc-49aa-8cd9-987907b2417e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "widgets.IntSlider(\n",
+    "    value=7,\n",
+    "    min=0,\n",
+    "    max=10,\n",
+    "    step=1,\n",
+    "    description='Test:',\n",
+    "    disabled=False,\n",
+    "    continuous_update=False,\n",
+    "    orientation='horizontal',\n",
+    "    readout=True,\n",
+    "    readout_format='d'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18e0f70d-b735-4529-9c00-680bffb36d9b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1051,139 +1108,6 @@
    "outputs": [],
    "source": [
     "go.Heatmap?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b65f213e-bbce-4cda-a2b7-21572ae4990c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = px.imshow(\n",
-    "    image_stack[50, ...], \n",
-    "    x=x_grid,\n",
-    "    y=y_grid,\n",
-    "    width=800, \n",
-    "    height=800,\n",
-    "    color_continuous_scale='gray',\n",
-    "    zmin=0.2,\n",
-    "    zmax=0.4,\n",
-    ")\n",
-    "\n",
-    "\n",
-    "fig.update_layout(coloraxis_showscale=False)\n",
-    "fig.update_xaxes(showticklabels=False, range=[-100, 150])\n",
-    "fig.update_yaxes(showticklabels=False, range=[150, -100])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "021e8cb6-f775-46c0-aac9-6d34b53df153",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig.update_yaxes?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f36b5bf0-f642-41cd-adf0-4b3f0804fdc0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d8a3a8e-64c8-4feb-9a11-7f11e6d80043",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98c572da-a0c9-4780-a44f-b477816743b6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import the necessaries libraries\n",
-    "import plotly.offline as pyo\n",
-    "import plotly.graph_objs as go\n",
-    "# Set notebook mode to work in offline\n",
-    "pyo.init_notebook_mode()\n",
-    "# Create traces\n",
-    "trace0 = go.Scatter(\n",
-    "    x=[1, 2, 3, 4],\n",
-    "    y=[10, 15, 13, 17]\n",
-    ")\n",
-    "trace1 = go.Scatter(\n",
-    "    x=[1, 2, 3, 4],\n",
-    "    y=[16, 5, 11, 9]\n",
-    ")\n",
-    "# Fill out data with our traces\n",
-    "data = [trace0, trace1]\n",
-    "# Plot it and save as basic-line.html\n",
-    "pyo.iplot(data, filename = 'basic-line')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e03919e8-f36f-41a2-8cb3-3689d6888cfe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3e6e90b-4896-45bc-9c5e-235b388891bc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eda69dd2-5f9e-4c4d-ae64-dd6efb6e95dd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3aedf97-f3f7-4e60-9516-27666abd15d5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fbd9415a-1ef4-4b0a-a628-c80c7f54a04c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8731d210-2db0-4d45-b613-9897b1cfcbd0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# predicted_contours_by_structure = rai.masks_to_contours_by_structure(\n",
-    "#     cfg=cfg, x_grid=x_grid, y_grid=y_grid, masks=predicted_masks[0:original_num_slices, ...]\n",
-    "# )\n",
-    "\n",
-    "# rai.plot_contours_by_structure(\n",
-    "#     x_grid, y_grid, image_stack[0:original_num_slices, ...], combined_contours_by_structure, align_map\n",
-    "# )"
    ]
   },
   {
